--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -1,6 +1,6 @@
 - name: Ensure .ssh directory exists.
   file:
-    dest: "{{ dest_key | dirname }}"
+    dest: "{{ dest_ssh_dir }}"
     mode: 0700
     state: directory
   tags:
@@ -10,8 +10,8 @@
 
 - name: Install ssh key
   copy:
-    src: "{{ source_key }}"
-    dest: "{{ dest_key }}"
+    src: "{{ source_ssh_dir }}/id_rsa"
+    dest: "{{ dest_ssh_dir }}/id_rsa"
     mode: 0600
   tags:
     - dotfiles
@@ -20,8 +20,18 @@
 
 - name: Install ssh key public
   copy:
-    src: "{{ source_key }}.pub"
-    dest: "{{ dest_key }}.pub"
+    src: "{{ source_ssh_dir }}/id_rsa.pub"
+    dest: "{{ dest_ssh_dir }}/id_rsa.pub"
+    mode: 0644
+  tags:
+    - dotfiles
+    - install
+    - ssh
+
+- name: Install ssh config
+  copy:
+    src: "{{ source_ssh_dir }}/config"
+    dest: "{{ dest_ssh_dir }}/config"
     mode: 0644
   tags:
     - dotfiles
