--- a/local.yml
+++ b/local.yml
@@ -22,3 +22,4 @@
     - include: tasks/lsp-setup.yml
     - include: tasks/dotfiles.yml
     - include: tasks/brave.yml
+    - include: tasks/fonts.yml
