--- a/tasks/lsp-setup.yml
+++ b/tasks/lsp-setup.yml
@@ -9,6 +9,22 @@
     - go
     - lsp
 
+- name: Install rust-analyzer 1
+  shell: curl -L https://github.com/rust-lang/rust-analyzer/releases/latest/download/rust-analyzer-x86_64-unknown-linux-gnu.gz | gunzip -c - > ~/.local/bin/rust-analyzer
+  tags:
+    - install
+    - rust
+    - lsp
+
+- name: Install rust-analyzer 2
+  file:
+    path: "{{ ansible_env.HOME }}/.local/bin/rust-analyzer"
+    mode: a+x
+  tags:
+    - install
+    - rust
+    - lsp
+
 - name: Install Lua server 1
   file:
     dest: "{{ ansible_env.HOME }}/Projects/lsp/lua-language-server"
