solidity lsp and setup solana

--- a/tasks/dev-setup.yml
+++ b/tasks/dev-setup.yml
@@ -44,6 +44,12 @@
     - install
     - rust
 
+- name: Install Solana
+  shell: sh -c "$(curl -sSfL https://release.solana.com/stable/install)" --no-modify-path
+  tags:
+    - install
+    - solana
+
 - name: Install Python
   become: true
   dnf:
